# circle-strike

./: .gitignore
client/: index.html  package-lock.json  package.json
client/public/: index_old.html
client/src/: App.tsx  Game.tsx
server/: Cargo.toml
server/src/: main.rs
